# OnlineCinemaAPI

./: .env.sample  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: main.yml
src/: main.py
src/config/: __init__.py  dependencies.py  settings.py
src/database/: __init__.py  session_sqlite.py
src/database/migrations/: env.py
src/database/migrations/versions/: 1c93b8f130a5_movies_migration.py  75bb1ea79b4f_initial_migration.py  ee8f4f95dff9_new_migrations.py  f564b945d107_initial_migration.py
src/database/models/: movies.py  orders.py  payments.py  users.py  utils.py
