[project]
name = "src"
version = "0.1.0"
description = "FastAPI cinema booking API"
authors = [
    { name = "Arsen Myroniuk", email = "arisenmyr@gmail.com" },
    { name = "Yehor Ripa" },
    { name = "Arsenii Aristov" },
    { name = "Bohdan Havryliyk" },
    { name = "Danylo Trukhanov" }
]
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.11",
    "sqlalchemy>=2.0.39,<3.0.0",
    "alembic>=1.15.1,<2.0.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.6",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1,<2.0.0",
    "aiosqlite>=0.21.0,<0.22.0",
    "asyncpg>=0.30.0,<0.31.0",
    "psycopg2-binary>=2.9.10",
    "jinja2>=3.1.5",
    "pillow>=11.1.0",
    "python-multipart>=0.0.20",
]

[tool.poetry.dependencies]
python = "^3.10"

[project.optional-dependencies]
dev = [
    "flake8>=7.1.2",
    "black>=25.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-env>=1.1.5",
    "pytest-order>=1.3.0",
]


[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
